# customer-churn-prediction

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  01_eda_executed.ipynb  02_feature_engineering.ipynb  02_feature_engineering_executed.ipynb  03_model_training.ipynb  03_model_training_executed.ipynb  04_cost_sensitive.ipynb  04_cost_sensitive_executed.ipynb  05_optuna_tuning.ipynb  06_generalization.ipynb  07_drift_monitoring.ipynb
src/evaluation/: metrics.py
src/features/: pipeline.py
src/models/: train.py
src/monitoring/: drift.py
src/serving/: app.py
tests/: test_drift.py  test_pipeline.py
